--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       content="Web site created using create-react-app"
     />
     <title>Template React App</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Forum&family=Roboto:wght@100;300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
