feat: create header and toolbar layout

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Template React App</title>
+    <title>User Notes</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Forum&family=Roboto:wght@100;300;400;500;700&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="shortcut icon"
+      href="%PUBLIC_URL%/user-notes-icon.png"
+      type="image/x-icon"
     />
   </head>
   <body>
